feat: swap local file storage for Cloudinary + full Render deploy config
Cloudinary integration:
- FileStorageService: full rewrite — uploads to Cloudinary, returns secure HTTPS URL
  - Predictable public_id: family-tree/person_{id} — auto-overwrites on re-upload
  - No orphan files ever, no UUID tracking needed
  - delete() uses personId directly — no URL parsing
- FileController: deleted — Cloudinary serves its own files
- PersonService: photoUrl now stores Cloudinary HTTPS URL directly
- pom.xml: added cloudinary-http44:1.38.0

Config / security:
- application.yml: all secrets via env vars (DB_URL, JWT_SECRET, CLOUDINARY_URL, CORS_ALLOWED_ORIGINS)
- application-dev.yml: H2 stays for local dev, Cloudinary URL optional via env var
- SecurityConfig: removed /files/** rule (not needed), CORS reads from env var
- Dockerfile: removed /uploads dir (no local storage needed)

Render deployment:
- render.yaml: Blueprint for both services (backend + frontend), free plan
- .env.example: updated with Neon JDBC URL format + Cloudinary URL format